feat:Add expense tracking page with form and list components
- Create new Page component for expense tracking
- Implement ExpensesProvider to manage global state
- Add ExpenseForm for inputting new expenses
- Include ExpenseList to display all expenses
- Add navigation link back to homepage

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,18 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules"]
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "src/app/components/style/NavItem.styled.jsx",
+    "src/app/components/style/Nav.styled.tsx",
+    "src/app/components/style/Container.styled.jsx",
+    "src/app/components/style/Button.styled.js"
+  ],
+  "exclude": ["node_modules"],
+  "resolutions": {
+    "styled-components": "^5"
+  }
 }
