--- a/package.json
+++ b/package.json
@@ -7,13 +7,19 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "deploy": "next build && firebase deploy && next start"
   },
   "dependencies": {
+    "@evervault/sdk": "^6.2.1",
+    "axios": "^1.7.2",
+    "firebase": "^10.12.4",
+    "firebase-admin": "^12.2.0",
     "next": "14.2.5",
-    "react": "^18",
-    "react-dom": "^18",
-    "styled-components": "^6.1.12"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "styled-components": "^6.1.12",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -22,6 +28,6 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "eslint-config-prettier": "^9.1.0",
-    "typescript": "^5"
+    "typescript": "^5.5.4"
   }
 }
