--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.7.2",
     "firebase": "^10.12.4",
     "firebase-admin": "^12.2.0",
+    "lucide-react": "^0.417.0",
     "next": "14.2.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
