refactor: major project restructure and improvements
# Architecture
- Implement context provider pattern for state management
- Move filter state to FilterProvider
- Create useFilter hook for centralized filter logic
- Restructure components to use context instead of prop drilling

# Project Structure
- Move filter-related components to dedicated directory
- Create shared utilities folder
- Separate provider components
- Clean up unused files

# TypeScript Enhancement
- Add FilterType definitions
- Create shared types for filter state
- Improve type safety in hooks and components

# UI/UX Updates
- Update color scheme and typography
- Improve component spacing and alignment
- Refine filter controls layout
- Add consistent styling across components"

--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "@evervault/sdk": "^6.2.1",
     "@rive-app/react-canvas": "^4.17.6",
     "chart.js": "^4.4.7",
-    "firebase": "^10.14.1",
+    "firebase": "^11.2.0",
     "framer-motion": "^12.0.0",
     "lucide-react": "^0.417.0",
-    "next": "14.2.5",
+    "next": "^14.2.23",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
